# MASt3R-SLAM

./: .gitignore  README.md  main.py  pyproject.toml  setup.py
docker/: Dockerfile  compose.yml  entrypoint.sh
mast3r_slam/: evaluate.py
mast3r_slam/backend/src/: gn_kernels.cu
scripts/: compare_trajectories.py  install-cuda-12.4.sh  run_grabette_episode.py
